--- a/deploy/ingress.yaml
+++ b/deploy/ingress.yaml
@@ -12,4 +12,4 @@ spec:
       - path: /
         backend:
           serviceName: hicoin-clientmanager-webapi
-          servicePort: hicoin-clientmanager-webapi
+          servicePort: http
