--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:   
   ##LOCAL##type: NodePort 
   ports:
-    - name: hicoin-clientmanager-webapi
+    - name: http
       port: 5001
       targetPort: 5001
       ##LOCAL##nodePort: 54321
